attempt to fix the gap at the bottom of small screens (epic fail)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -422,6 +422,17 @@ a.ca-bottom-tablinks:nth-child(1) {
     box-shadow: var(--shadow);
 }
 
+@media (max-width: 420px) {
+    .ca-maincontent {
+        min-height: 100vh;
+    }
+
+    main {
+        transform-origin: center top;
+    }
+}
+
+
 .ca-header-text {
     position: relative;
     display: flex;
